fixed border-radius on safari

--- a/src/components/entry/Entry.module.css
+++ b/src/components/entry/Entry.module.css
@@ -30,8 +30,7 @@
     position: absolute;
     bottom: 0;
 
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+    border-radius: 15px;
 }
 
 .titleContainer {
